istio/apps/vault/not-in-use-ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: vault-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - vault.localtest.me
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vault-vs
  namespace: vault
spec:
  hosts:
  - vault.localtest.me
  gateways:
  - istio-system/vault-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vault.vault.svc.cluster.local
        port:
          number: 8200
